--- a/co-kind-report/paper.bib
+++ b/co-kind-report/paper.bib
@@ -1136,542 +1136,41 @@ month = {December}
  publisher = {IEEE}
 } 
 
-@InProceedings{pike-rv-11,
-  author =    {Lee Pike and Sebastian Niller and Nis Wegmann},
-  title =     {Runtime Verification for Ultra-Critical Systems},
-  booktitle = {Proceedings of the 2nd Intl. Conference on Runtime Verification},
-  publisher = {Springer},
-  series  =   {LNCS},
-  year =      {2011},
-  month =     {September}
+
+
+% -----------------------------------
+% CoPilot
+% -----------------------------------
 }
 
 
-@TechReport{monitors,
-  author =       {Alwyn Goodloe and Lee Pike},
-  title =        {Monitoring Distributed Real-Time Systems: A Survey and Future Directions},
-  institution =  {NASA Langley Research Center},
-  year =         {2010},
-  number =    {NASA/CR-2010-216724},
-  month =     {July},
-  OPTnote =      {Available at \url{http://ntrs.nasa.gov/search.jsp?R=278742&id=3&as=false&or=false&qs=Ns%3DArchiveName%257c0%26N%3D4294643047}}
-}
-
-@inproceedings{sheeran,
-  author    = {Mary Sheeran and
-               Satnam Singh and
-               Gunnar St{\aa}lmarck},
-  title     = {Checking Safety Properties Using Induction and a SAT-Solver},
-  booktitle = {Formal Methods in Computer-Aided Design (FMCAD)},
-  year      = {2000},
-  pages     = {108--125},
-  series    = {LNCS},
-  volume    = {1954},
-  publisher = {Springer}
-}
-
-@inproceedings{feldspar1,
-  author    = {Emil Axelsson and
-               Koen Claessen and
-               Mary Sheeran and
-               Josef Svenningsson and
-               David Engdal and
-               Anders Persson},
-  title     = {The Design and Implementation of {F}eldspar - An Embedded
-               Language for Digital Signal Processing},
-  booktitle = {Implementation and Application of Functional Languages},
-  year      = {2011},
-  publisher = {Springer},
-  series    = {LNCS},
-  volume    = {6647},
-  pages     = {121--136}
-}
-
-
-@inproceedings{tinelli,
-  author =	 {Temesghen Kahsai and Yeting Ge and Cesare Tinelli},
-  title =	 {Instantiation-Based Invariant Discovery},
-  booktitle =	 {3rd NASA Formal Methods Symposium},
-  OPTEditor =	 {M. Bobaru and K. Havelundand G. Holzmann and R. Joshi},
-  publisher =	 {Springer},
-  pages =	 {192--207},
-  series =	 {LNCS},
-  volume =	 {6617},
-  year =	 {2011}
-}
-
-@inproceedings{gadts,
- author = {Schrijvers, Tom and Peyton Jones, Simon and Sulzmann, Martin and Vytiniotis, Dimitrios},
- title = {Complete and decidable type inference for {GADT}s},
- booktitle = {International Conference on Functional Programming (ICFP)},
- series = {ICFP '09},
- year = {2009},
- pages = {341--352},
- publisher = {ACM}
-} 
-
-@ARTICLE{blast,
-    author = {Dirk Beyer and Thomas A. Henzinger and Ranjit Jhala and Rupak Majumdar},
-    title = {The software model checker {BLAST}: Applications to software engineering},
-    journal = {International Journal on Software Tools for Technology Transfer},
-    year = {2007}
-}
-
-@inproceedings{cbmc,
-  AUTHOR    = { Clarke, Edmund
-                and Kroening, Daniel
-                and Lerda, Flavio },
-  TITLE     = { A Tool for Checking {ANSI-C} Programs },
-  BOOKTITLE = { Tools and Algorithms for the Construction and Analysis of Systems (TACAS) },
-  YEAR      = { 2004 },
-  PUBLISHER = { Springer },
-  PAGES     = { 168--176 },
-  SERIES    = { LNCS },
-  OPTVOLUME    = { 2988 }
-}
-
-@InProceedings{rvRushby,
-  author =       {John Rushby},
-  title =        {Runtime Certification},
-  OPTcrossref =  {},
-  OPTkey =       {},
-  booktitle = {Eighth Workshop on Runtime Verification (RV08)},
-  pages =     {21--35},
-  year =      {2008},
-  OPTeditor =    {},
-  volume =    {5289},
-  OPTnumber =    {},
-  series =    {LNCS}
-}
-
-% ----------------------------------
-%
-% ---------------------------------
-@Book{lynch,
-  author =    {Nancy A. Lynch},
-  ALTeditor =    {},
-  title =        {Distributed Algorithms},
-  publisher =    {Morgan Kaufmann},
-  year =         {1996}
-}
-
-@Article{lamport95byzantine,
-  author =       {L. Lamport and R. Shostak and M. Pease},
-  title =        {The {Byzantine} Generals Problem},
-  journal =      {ACM Transactions on Programming Languages and Systems},
-  year =         {1982},
-  OPTkey =       {},
-  volume =    {4},
-  Tnumber =    {3},
-  pages =     {382--401},
-  month =     {July},
-  OPTnote =      {},
-  OPTannote =    {},
-  Optnote = {Available at \url{http://citeseer.nj.nec.com/lamport82byzantine.html}}
-}
-
-@InProceedings{laprie,
-  author =       {Jean-Claude Laprie},
-  title =        {Dependability---Its Attributes, Impairments and Means},
-  OPTcrossref =  {},
-  OPTkey =       {},
-  booktitle = {Predictability Dependable Computing Systems},
-  pages =     {3--24},
-  year =      {1995},
-  OPTeditor =    {B. Randell and J.-C. Laprie and H. Kopetz and B. Littlewood},
-  OPTvolume =    {},
-  OPTnumber =    {},
-  OPTseries =    {{ESPRIT} Basic Research Series},
-  OPTaddress =   {},
-  OPTmonth =     {},
-  OPTorganization = {},
-  publisher = {Springer},
-  OPTnote =      {},
-  OPTannote =    {}
-}
-
-
-@article{butler,
- author = {Butler, R. W. and Finelli, G. B.},
- title = {The Infeasibility of Quantifying the Reliability of Life-Critical Real-Time Software},
- journal = {IEEE Transactions on Software Engineering},
- volume = {19},
- issue = {1},
- month = {January},
- year = {1993},
- pages = {3--12},
- publisher = {IEEE Press}
-} 
-
-@inproceedings{msc,
- author = {Kr\"{u}ger, Ingolf H. and Meisinger, Michael and Menarini, Massimiliano},
- title = {Runtime verification of interactions: from {MSCs} to aspects},
- booktitle = {International Conference on Runtime Verification},
- year = {2007},
- pages = {63--74},
- publisher = {Springer}
-} 
-
-@article{l4,
-  author =  {Gerwin Klein 
-  and June Andronick
-  and Kevin Elphinstone 
-  and Gernot Heiser	 
-  and David Cock
-  and Philip Derrin
-  and Dhammika Elkaduwe
-  and Kai Engelhardt
-  and Rafal Kolanski
-  and Michael Norrish
-  and Thomas Sewell
-  and Harvey Tuch
-  and Simon Winwood},
-  title =        {{seL4}: Formal Verification of an {OS} Kernel},
-  journal =      {Communications of the ACM (CACM)},
-  publisher =    {ACM},
-  year =         {2010},  
-  month =        jun,
-  pages =        {107--115},
-  volume =       53, 
-  number =       6
-}
-
-
-
-%------------------------
-%  Time Triggered
-% ------------------------
-
-
-
-@Book{kopetz,
-  author =    {Hermann Kopetz},
-  ALTeditor =    {},
-  title =        {Real-Time Systems},
-  publisher =    {Kluwer Academic Publishers},
-  year =         {1997},
-  series =    {The Kluwer International Series in Engineering and Computer Science}
-
-}
-
-
-
-@inproceedings{ttethernet,
- author = {Kopetz,, Hermann},
- title = {The Rationale for Time-Triggered Ethernet},
- booktitle = {Real-Time Systems Symposium (RTSS)},
+%-------------------
+% GADT 
+%-------------------
+@inproceedings{Johann2008,
+ author = {P. Johann  and N. Ghani},
+ title = {Foundations for Structured Programming with {GADT}s},
+ booktitle = {Proceedings of the 35th Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+ series = {POPL '08},
  year = {2008},
- pages = {3--11},
- publisher = {IEEE}
- }
-
-
-%---------
-@book{Haskell98,
-  editor = {Simon Peyton Jones},
-  howpublished = {PDF},
-  pages = 277,
-  publisher = {http://haskell.org/},
-  title = {{H}askell 98 Language and Libraries: The Revised Report},
-  type = {Language Definition},
-  year = 2002
-}
-%  url = {http://haskell.org/definition/haskell98-report.pdf},
-
-@InProceedings{FriedmanW76,
-  author = 	 {D. Friedman and D. Wise},
-  title = 	 {{CONS Should Not Evaluate its Argument}},
-  booktitle = {Automata, Languages and Programming},
-  pages = 	 {256--284},
-  year = 	 {1976},
-  publisher = {University of Edinburgh Press}
-}
-
-% -------
-@techreport{ISO:C99,
-  author = {ISO},
-  editor = {WG14},
-  note = {ISO/IEC 9899:1999 draft},
-  title = {{ISO C} Standard},
-  url = {http://www.open-std.org/jtc1/sc22/wg14/www/docs/n1124.pdf},
-  year = 1999,
-}
-
-@inproceedings{driscoll,
-  author    = {K. Driscoll and
-               B. Hall and
-               H{\aa}kan Sivencrona and
-               P. Zumsteg},
-  booktitle     = {Computer Safety, Reliability, and Security, 22nd International
-               Conference, {SAFECOMP}},
-  title     = {Byzantine Fault Tolerance, from Theory to Reality},
-  year      = {2003},
-  pages     = {235-248},
-  publisher = {Springer}
-}
-
-
-@INPROCEEDINGS{qc1,
-    author = {Koen Claessen and John Hughes},
-    title = {Testing Monadic Code with {QuickCheck}},
-    booktitle = {In Proc. ACM SIGPLAN workshop on Haskell},
-    year = {2002},
-    pages = {65--77}
-}
-
-@phdthesis{miner,
- author = {Miner, Paul},
- note = {Adviser-Johnson, Steven D.},
- title = {Hardware verification using coinductive assertions},
- year = {1998},
- school = {Indiana University, Bloomington}
- }
-
-% publisher = {Indiana University, Bloomington}
-
-
-@InProceedings{DwyerDE08,
-  author = 	 {M.B. Dwyer and M. Diep and S. Elbaum},
-  title = 	 {Reducing the Cost of Path Property Monitoring Through Sampling},
-  booktitle = {Proceedings of the 23rd International Conference on Automated Software Engineering},
-  pages = 	 {228--237},
-  year = 	 {2008}
-}
-
-
-@article{LennartMS08,
- author = {L.  Augustsson and H. Mansell and G. Sittampalam},
- title = {{Paradise:} a two-stage {DSL} embedded in {H}askell},
- journal = {SIGPLAN Not.},
- volume = {43},
- number = {9},
- year = {2008},
- issn = {0362-1340},
- pages = {225--228},
-  publisher = {ACM},
- address = {New York, NY, USA},
- }
-
-
-@InProceedings{feldspar,
-  author = 	 {E. Axelsson and K. Claessen and G.  Dévai and Z.  Horváth and K.  Keijzer and B.  Lyckegård and A.  Persson and  M. Sheeran
-and J.  Svenningsson and A. Vajda},
-  title = 	 {{Feldspar:} A Domain Specific Language for Digital Signal Processing algorithms},
- booktitle = {8th ACM/IEEE Int. Conf. on Formal Methods and Models for Codesign},
- year = 	 {2010}
-}
-
-@Misc{scade,
-   author = 	 {Esterel Technologies},
-  OPTtitle = 	 {},
-  note = 	 {\url{http://www.esterel-technologies.com/technology/success-stories/airbus}}
-
-}
-
-
-
-
-@InProceedings{SammapunLS0R7,
-  author =       {U. Sammapun and I. Lee and O. Sokolsky and J. Regehr},
-  title =        {Statistical Runtime Checking of Probabilistic Properties},
-  booktitle = {{RV'07}: Proceedings of Runtime Verification},
-  pages =        {164--175},
-  year =         {2007},
-  series =       {LNCS}
-}
-
-
-
-
-%---------------
-@InProceedings{FishmeisterL09,
-  author = 	 {S. Fishmeister and P. Lam},
-  title = 	 {On Time-Aware Insrumentation of Programs},
-    booktitle = {{RTAS'09: 15h IEEE Real-Time and Embedded Technology and Application Symposium} },
-  OPTpages = 	 {},
-  year = 	 {2009}
-  }
-
-
-@InProceedings{ZhuDG10,
-  author = 	 {H. Zhu and M. Dwyer and S. Goddard},
-  title = 	 {Predictable Runtime Monitoring},
-  booktitle = {ECRTS'09: 21st Euromicro Conference on Real-Time Systems},
-  pages = 	 {173--183},
-  year = 	 {2009}
- }
-
-
-
-
-%---------- Model Checking, k-induction and IC3
-@INPROCEEDINGS{ClarkeBounded01,
-    author = {Edmund Clarke and Armin Biere and Richard Raimi and Yunshan Zhu},
-    title = {Bounded Model Checking Using Satisfiability Solving},
-    booktitle = {Formal Methods in System Design},
-    year = {2001},
-    publisher = {Kluwer Academic Publishers}
-}
-
-@article{ClarkeBounded03,
-  author    = {Armin Biere and
-               Alessandro Cimatti and
-               Edmund M. Clarke and
-               Ofer Strichman and
-               Yunshan Zhu},
-  title     = {Bounded model checking},
-  journal   = {Advances in Computers},
-  year      = {2003},
-  volume    = {58},
-  pages     = {117--148}
-}
-
- 
-@Book{ClarkeMC,
-  author = 	 {E.M.  Clarke and O. Grumberg and D. Peled},
-  title = 	 {Model Checking},
-  publisher = 	 {MIT Press},
-  year = 	 {1999}
-}
-
-@PhdThesis{HagenPhD,
-  author = 	 {G. Hagen},
-  title = 	 {Verifying safety properties of Lustre programs : an SMT-based
-  approach},
-  school = 	 {University of Iowa},
-  year = 	 {2008}
-}
-
-
-@inproceedings{Sheeran00,
- author = {M. Sheeran  and S. Singh  and G. St{\aa}lmarck },
- title = {Checking Safety Properties Using Induction and a {SAT}-Solver},
- booktitle = {Proceedings of the Third International Conference on Formal Methods in Computer-Aided Design},
- series = {FMCAD '00},
- year = {2000},
- pages = {108--125},
- publisher = {Springer-Verlag}
+ pages = {297--308}
 } 
 
-@article{EenS03,
-  author    = {Niklas E{\'{e}}n and
-               Niklas S{\"{o}}rensson},
-  title     = {Temporal induction by incremental {SAT} solving},
-  journal   = {Electr. Notes Theor. Comput. Sci.},
-  year      = {2003},
-  volume    = {89},
-  number    = {4},
-  pages     = {543--560}
-}
-
-@Proceedings{Hagen08,
-  authur = {G. Hagen and C. Tinelli}, 
-  title = 	 {Scaling up the formal verification of Lustre programs with
-  SMT-based techniques},
-  year = 	 {2008},
-  booktitle = {Proceedings of the 8th International Conference on Formal Methods in Computer-Aided Design (FMCAD 08)},
-  OPTpublisher = {IEEE}
-}
-
-
-@inproceedings{BradleyCAV12,
- author = {A. R. Bradley},
- title = {IC3 and Beyond: Incremental, Inductive Verification},
- booktitle = {Proceedings of the 24th International Conference on Computer Aided Verification},
- series = {CAV'12},
- year = {2012},
- isbn = {978-3-642-31423-0},
- location = {Berkeley, CA},
- pages = {4--4},
- numpages = {1},
- publisher = {Springer-Verlag}
-} 
-
-@inproceedings{Somenzi-FMCAD11,
- author = {F. Somenzi and A. R. Bradley},
- title = {IC3: Where Monolithic and Incremental Meet},
- booktitle = {Proceedings of the International Conference on Formal Methods in Computer-Aided Design},
- series = {FMCAD '11},
- year = {2011},
- pages = {3--8},
- publisher = {FMCAD Inc},
- numpages = {6}
-} 
-
-@incollection{bradley2012understanding,
-  title={Understanding ic3},
-  author={A. R. Bradley},
-  booktitle={Theory and Applications of Satisfiability Testing--SAT 2012},
-  pages={1--14},
-  year={2012},
-  publisher={Springer Berlin Heidelberg}
-}
-
-%Incremental 
-@INPROCEEDINGS{Bradley06,
-    author = {A. R. Bradley and Z. Manna},
-    title = {Verification constraint problems with strengthening},
-    booktitle = {In ICTAC, volume 4281of LNCS},
-    pages={ 35--49},
-    year = {2006},
-    publisher = {Springer-Verlag}
-}
-
-
-@inproceedings{Bradley2011,
- author = {A. R. Bradley and F. Somenzi  and Z. Hassan and Y. Zhang},
- title = {An Incremental Approach to Model Checking Progress Properties},
- booktitle = {Proceedings of the International Conference on Formal Methods in Computer-Aided Design},
- series = {FMCAD '11},
- year = {2011},
- isbn = {978-0-9835678-1-3},
- location = {Austin, Texas},
- pages = {144--153},
- publisher = {FMCAD Inc}
-} 
-
-
-
-
-%path compression
-@InProceedings{dMRS03,
-  author =       "Leonardo de Moura and Harald Rue{\ss} and Maria
-                 Sorea",
-  title =        "Bounded Model Checking and Induction: From Refutation to Verification",
-  editor =       "Andrei Voronkov",
-  booktitle =    "Computer-Aided Verification, CAV 2003",
-  year =         "2003",
-  series =       "Lecture Notes in Computer Science",
-  volume =       "2725",
-  publisher =    "Springer-Verlag",
-  pages =        "14--26"
-}
-
-%CEGAR 
-@article{Clarke2003CAR,
- author = {E. Clarke  and O. Grumberg and S. Jha and Y. Lu  and H Veith},
- title = {Counterexample-guided Abstraction Refinement for Symbolic Model Checking},
- journal = {J. ACM},
- issue_date = {September 2003},
- volume = {50},
- number = {5},
- month = sep,
+@inproceedings{Xi2003,
+ author = {H. Xi  and C. Chen and G. Chen},
+ title = {Guarded Recursive Datatype Constructors},
+ booktitle = {Proceedings of the 30th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+ series = {{POPL} '03},
  year = {2003},
- issn = {0004-5411},
- pages = {752--794},
- publisher = {ACM}
+ pages = {224--235},
+ numpages = {12}
 } 
 
-@inproceedings{bh07structural,
-  author = {Domagoj Babi\'c and Alan J. Hu},
-  title = {{Structural Abstraction of Software Verification Conditions}},
-  booktitle = {Proceedings of the 19th International
-    Conference on Computer Aided Verification},
-  publisher = {Springer},
-  series = {Lecture Notes in Computer Science},
-  location = {Berlin, Germany},
-  month = {July},
-  year = {2007},
-  volume = {4590},
-  pages = {371--383}
+@TechReport{CheneyHinze03,
+  author = 	 {J. Cheney and R. Hinze},
+  title = 	 {First-Class Phantom Types},
+  institution =  {Cornell University},
+  year = 	 {2003},
+  number = 	 {{TR}3003-1901}
 }
+
